--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
 <meta name="referrer" content="origin">
 <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Istok+Web:400,700&amp;subset=all">
 <title>Home</title>
-<link rel="stylesheet" type="text/css" href="css/site.20181107231309.css">
+<link rel="stylesheet" type="text/css" href="css/site.20181108082821.css">
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="css/site.20181107231309-lteIE7.css">
+<link rel="stylesheet" type="text/css" href="css/site.20181108082821-lteIE7.css">
 <![endif]-->
 </head>
 <body id="body">
@@ -182,14 +182,14 @@
 </picture>
 </div>
 <div class="vis-3 pos-28 size-32 cont-23">
-<a class="anchor-2 js-75" href="images/pianting-1-copy-312.jpg"><picture class="img-24"><source srcset="images/pianting-1-copy-53.jpg 1x, images/pianting-1-copy-106.jpg 2x" media="(max-width:1199px)"><source srcset="images/pianting-1-copy-202.jpg 1x, images/pianting-1-copy-404.jpg 2x" media="(min-width:1200px)"><img src="images/pianting-1-copy-53.jpg" alt="" class="js-14 img-23"></picture></a>
+<a class="anchor-2 js-75" href="images/pianting-1-copy-312-2.jpg"><picture class="img-24"><source srcset="images/pianting-1-copy-53.jpg 1x, images/pianting-1-copy-106.jpg 2x" media="(max-width:1199px)"><source srcset="images/pianting-1-copy-202.jpg 1x, images/pianting-1-copy-404.jpg 2x" media="(min-width:1200px)"><img src="images/pianting-1-copy-53.jpg" alt="" class="js-14 img-23"></picture></a>
 </div>
 </div>
 <div class="vis-3 pos-29 size-33 colwrapper-2">
 <div class="vis-3 pos-3 size-34 cont-24">
 <picture class="img-26">
 <source srcset="images/rectangle-3-copy-9-65.png 1x, images/rectangle-3-copy-9-130.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-2.png 1x, images/rectangle-3-copy-9-498-2.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-15 img-25">
 </picture>
 </div>
@@ -205,7 +205,7 @@
 <div class="vis-3 pos-3 size-31 cont-26">
 <picture class="img-22">
 <source srcset="images/rectangle-3-copy-9-65.png 1x, images/rectangle-3-copy-9-130.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-3.png 1x, images/rectangle-3-copy-9-498-3.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-17 img-21">
 </picture>
 </div>
@@ -223,14 +223,14 @@
 <div class="vis-3 pos-3 size-31 cont-28">
 <picture class="img-22">
 <source srcset="images/rectangle-3-copy-9-65.png 1x, images/rectangle-3-copy-9-130.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-4.png 1x, images/rectangle-3-copy-9-498-4.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-19 img-21">
 </picture>
 </div>
 <div class="vis-3 pos-28 size-32 cont-29">
 <picture class="img-32">
 <source srcset="images/psb-copy-2-53-1.jpg 1x, images/psb-copy-2-106-1.jpg 2x" media="(max-width:1199px)">
-<source srcset="images/psb-copy-2-202-1.jpg 1x, images/psb-copy-2-404-1.jpg 2x" media="(min-width:1200px)">
+<source srcset="images/psb-copy-2-202.jpg 1x, images/psb-copy-2-404.jpg 2x" media="(min-width:1200px)">
 <img src="images/psb-copy-2-53-1.jpg" alt="" class="js-20 img-31">
 </picture>
 </div>
@@ -239,7 +239,7 @@
 <div class="vis-3 pos-3 size-34 cont-30">
 <picture class="img-26">
 <source srcset="images/rectangle-3-copy-9-65.png 1x, images/rectangle-3-copy-9-130.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-5.png 1x, images/rectangle-3-copy-9-498-5.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-21 img-25">
 </picture>
 </div>
@@ -255,7 +255,7 @@
 <div class="vis-3 pos-3 size-31 cont-32">
 <picture class="img-22">
 <source srcset="images/rectangle-3-copy-9-65.png 1x, images/rectangle-3-copy-9-130.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-6.png 1x, images/rectangle-3-copy-9-498-6.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-23 img-21">
 </picture>
 </div>
@@ -273,7 +273,7 @@
 <div class="vis-3 pos-3 size-31 cont-34">
 <picture class="img-22">
 <source srcset="images/rectangle-3-copy-9-65.png 1x, images/rectangle-3-copy-9-130.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-7.png 1x, images/rectangle-3-copy-9-498-7.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-25 img-21">
 </picture>
 </div>
@@ -289,7 +289,7 @@
 <div class="vis-3 pos-3 size-34 cont-36">
 <picture class="img-26">
 <source srcset="images/rectangle-3-copy-9-65.png 1x, images/rectangle-3-copy-9-130.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-8.png 1x, images/rectangle-3-copy-9-498-8.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-27 img-25">
 </picture>
 </div>
@@ -305,7 +305,7 @@
 <div class="vis-3 pos-3 size-31 cont-38">
 <picture class="img-22">
 <source srcset="images/rectangle-3-copy-9-65.png 1x, images/rectangle-3-copy-9-130.png 2x" media="(max-width:1199px)">
-<source srcset="images/rectangle-3-copy-9-249.png 1x, images/rectangle-3-copy-9-498.png 2x" media="(min-width:1200px)">
+<source srcset="images/rectangle-3-copy-9-249-9.png 1x, images/rectangle-3-copy-9-498-9.png 2x" media="(min-width:1200px)">
 <img src="images/rectangle-3-copy-9-65.png" alt="" class="js-29 img-21">
 </picture>
 </div>
@@ -400,7 +400,7 @@
 <script type="text/javascript" src="js/slick.js"></script>
 <script type="text/javascript" src="js/plyr2.js"></script>
 <script type="text/javascript" src="js/lightbox.js"></script>
-<script type="text/javascript" src="js/index.20181107231309.js"></script>
+<script type="text/javascript" src="js/index.20181108082821.js"></script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
 </script>
