--- a/jian-jie.html
+++ b/jian-jie.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
 <meta name="referrer" content="origin">
 <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Istok+Web:400,700&amp;subset=all">
 <title>简介</title>
-<link rel="stylesheet" type="text/css" href="css/site.20181107231309.css">
+<link rel="stylesheet" type="text/css" href="css/site.20181108082821.css">
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="css/site.20181107231309-lteIE7.css">
+<link rel="stylesheet" type="text/css" href="css/site.20181108082821-lteIE7.css">
 <![endif]-->
 </head>
 <body id="body">
@@ -335,7 +335,7 @@
 </div>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/slick.js"></script>
-<script type="text/javascript" src="js/jian-jie.20181107231309.js"></script>
+<script type="text/javascript" src="js/jian-jie.20181108082821.js"></script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
 </script>
